--- a/el-fili/index.html
+++ b/el-fili/index.html
@@ -29,7 +29,8 @@
 			"quality": "low",
 			"letterbox": "on",
 			"forceScale": true,
-			"forceAlign": true
+			"forceAlign": true,
+			"contextMenu": "rightClickOnly"
 		};
 		window.addEventListener("load", (event) => {
 			const ruffle = window.RufflePlayer.newest();
