--- a/el-fili/index.html
+++ b/el-fili/index.html
@@ -8,6 +8,10 @@
 	<link rel="apple-touch-icon" href="icon.png" />
 	<meta name="theme-color" content="#505050" />
 	<style>
+		* {
+			--splash-screen-background: #000;
+			--logo-display: none;
+		}
 		body {
 			width: 100vw;
 			height: 100vh;
